--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,34 @@
 *.class
-*.aux
-*.log
 *.swp
+*.acn
+*.acr
+*.alg
+*.aux
+*.bbl
 *.blg
-*.bib
+*.dvi
+*.fdb_latexmk
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.log
+*.lot
+*.maf
+*.mtc
+*.mtc0
+*.nav
+*.nlo
+*.out
+*.pdfsync
+*.ps
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdy
+*.tdo
